--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.6",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
@@ -23,6 +27,7 @@
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "vue-cli-plugin-tailwind": "~3.0.0"
   }
 }
